--- a/style.css
+++ b/style.css
@@ -16,6 +16,9 @@ ul {
 }
 
 header {
+  position: sticky;
+  top: -30px;
+  z-index: 20;
   width: 1020px;
   height: 89px;
   background-color: #2d303a;
@@ -47,17 +50,24 @@ nav > ul > li {
   line-height: 6px;
   letter-spacing: -0.1px;
   vertical-align: middle;
-  color: #ffffff;
   list-style: none;
   cursor: pointer;
 }
 
-nav > ul > li:first-child {
-  color:#f06c64;
+nav > ul > li> a {
+  color: #ffffff;
 }
 
-nav > ul > li:hover {
-  color:#f06c64;
+nav > ul > li > a:hover {
+  color:#e68782;
+}
+
+nav > ul > li > a:focus {
+  color: #f06c64;
+}
+
+.focus {
+  color: #f06c64 !important;
 }
 
 .nav__dota {
@@ -405,7 +415,7 @@ input::-moz-placeholder,
 input::-webkit-input-placeholder {
   font-size: 12px;
   line-height: 22px;
-  color: #f48c8f;
+  color: #f2f2f2;
   font-weight: 400;
   text-align: left;
 }
@@ -414,7 +424,7 @@ input::-webkit-input-placeholder {
   padding: 0 40px;
   height: 648px;
   background-color: #f06c64;
-  color: #f0d8d9;
+  color: #f2f2f2;
 }
 
 .relation__title {
@@ -446,11 +456,24 @@ input::-webkit-input-placeholder {
   height: 38px;
   font-size: 12px;
   line-height: 22px;
-  color: #f48c8f;
+  color: #f2f2f2;
   font-weight: 400;
   text-align: left;
   border-radius: 5px;
   background-color: #d6564f;
+}
+
+.message > input:focus {
+  color: #d6564f;
+  background-color: #f2f2f2;
+}
+
+form {
+  width: 700px;
+}
+
+.message__content {
+  padding-bottom: 164px !important;
 }
 
 ::-moz-placeholder,
@@ -462,24 +485,16 @@ input:-ms-input-placeholder  {
   font-size: 12px !important;
   line-height: 22px !important;
   font-weight: 400 !important;
-  color: #f0d8d9  !important;;
+  color: #f2f2f2  !important;;
   text-align: left !important;
   vertical-align: middle !important;
-}
-
-form {
-  width: 700px;
-}
-
-.message__content {
-  padding-bottom: 164px !important;
 }
 
 .message__btn {
   padding: 2px 10px;
   font-size: 14px;
   color: #d6564f;
-  background-color: #ffffff;
+  background-color: #f2f2f2;
   border: none;
   border-radius: 5px;
 }
@@ -519,14 +534,14 @@ form {
 }
 
 .contacts__item > a {
-  color: #f0d8d9;
+  color: #f2f2f2;
   text-decoration: none;
 }
 
 .contacts__item > a:hover {
   padding: 0;
   box-sizing: border-box;
-  border-bottom: 0.1px #f0d8d9 solid;
+  border-bottom: 0.1px #f2f2f2 solid;
 }
 
 .contacts__item > span {
