--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 body {
-  width: 1020px;
   margin: 0;
   padding: 0;
   font-family: "Lato", "Arial", sans-serif;
@@ -18,10 +17,20 @@ ul {
 header {
   position: sticky;
   top: -30px;
-  z-index: 20;
+  z-index: 21;
   width: 1020px;
   height: 89px;
   background-color: #2d303a;
+}
+
+main {
+  overflow: hidden;
+}
+
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  width: 1020px;
 }
 
 .logo {
@@ -54,18 +63,14 @@ nav > ul > li {
   cursor: pointer;
 }
 
-nav > ul > li> a {
+nav > ul > li > a {
   color: #ffffff;
+  transition: color 0.5s;
 }
 
 nav > ul > li > a:hover {
-  color:#e68782;
+  color:#f5c5c3;
 }
-
-nav > ul > li > a:focus {
-  color: #f06c64;
-}
-
 nav > ul > li > a.focus {
   color: #f06c64 !important;
 }
@@ -88,20 +93,35 @@ nav > ul > li > a.focus {
 }
 
 .slider {
+  width: 2050px;
+  height: 594px;
+}
+
+.slide {
+  position: relative;
+  display: inline-block;
   width: 1020px;
   height: 594px;
+}
+
+.slide_1 {
+  z-index: 1;
   background-color: #f06c64;
   background-image: url("assets/phone/slide1.png");
 }
 
-.slider_2 {
+.slide_2 {
+  z-index: 0;
   background-color: #648BF0;
   background-image: url("assets/phone/slide2.png");
 }
 
-.slider_1 {
-  background-color: #f06c64;
-  background-image: url("assets/phone/slide1.png");
+.slide_left {
+  transform: translateX(-100%);
+}
+
+.slide_right {
+  transform: translateX(+100%);
 }
 
 .btn {
@@ -111,11 +131,19 @@ nav > ul > li > a.focus {
 }
 
 .btn img {
-  position: absolute;
+  position: relative;
+}
+
+.btn_mobile1 {
+  top: 55px;
+  left: 110px;
+  z-index: 0;
+  width: 217px;
+  height: 460px;
 }
 
 .btn_mobile2 {
-  top: 270px;
+  top: 175px;
   left: 425px;
   z-index: 0;
   width: 460px;
@@ -124,67 +152,47 @@ nav > ul > li > a.focus {
 
 .btn_mobile3 {
   display: none;
-  top: 150px;
-  left: 390px;
+  top: 45px;
+  left: 310px;
   z-index: 0;
   width: 217px;
   height: 480px;
 }
 
-.slider_1 > .btn_mobile3 {
-  display: none;
-}
-
-.slider_2 > .btn {
-  display: none;
-}
-
-.slider_2 > .btn_mobile3 {
-  display: inline-block;
-}
-
-.btn_mobile1 {
-  top: 150px;
-  left: 110px;
-  z-index: 0;
-  width: 217px;
-  height: 460px;
-}
-
 .btn_mobile1 > .btn__phone-screen {
   top: 64px;
   left: 16px;
-  transition: visibility 0s ease 0.2s;
+  transition: visibility 0.3s ease 0.2s;
 }
 
 .btn_mobile1 > .btn__phone-dot {
-  top: 17px;
-  left: 107px;
-  transition: visibility 0s ease 0.2s;
+  bottom: 146px;
+  right: 84px;
+  transition: visibility 0.3s ease 0.2s;
 }
 
 .btn_mobile2 > .btn__phone-screen {
   top: 16px;
   left: 60px;
-  transition: visibility 0s ease 0.2s;
+  transition: visibility 0.3s ease 0.2s;
 }
 
 .btn_mobile2 > .btn__phone-dot {
-  top: 107px;
-  left: 434px;
-  transition: visibility 0s ease 0.2s;
+  top: 17px;
+  left: 98px;
+  transition: visibility 0.3s ease 0.2s;
 }
 
 .btn_mobile3 > .btn__phone-screen {
-  top: 57px;
+  top: 67px;
   left: 7px;
-  transition: visibility 0s ease 0.2s;
+  transition: visibility 0.3s ease 0.2s;
 }
 
 .btn_mobile3 > .btn__phone-dot {
-  top: 8px;
-  left: 105px;
-  transition: visibility 0s ease 0.2s;
+  bottom: 157px;
+  right: 99px;
+  transition: visibility 0.3s ease 0.2s;
 }
 
 .btn_hidden {
@@ -192,13 +200,15 @@ nav > ul > li > a.focus {
 }
 
 .slider__btn {
-  position: relative;
-  top: 280.76px;
+  position: absolute;
+  top: 50%;
   bottom: auto;
+  z-index: 20;
   display: inline-block;
   width: 16px;
   height: 27px;
   cursor: pointer;
+  transition: all 0.3s ease;
 }
 
 .slider__btn_back {
@@ -211,8 +221,7 @@ nav > ul > li > a.focus {
 }
 
 .slider__btn_next {
-  left: 903.44px;
-  right: 39.40px;
+  margin-left: 960px;
   background-image: url("assets/next.png");
 }
 
@@ -336,6 +345,14 @@ nav > ul > li > a.focus {
   background-color: #2d303a;
 }
 
+.portfolio_loading {
+  background-color: #2d303af1;
+}
+
+.portfolio__container {
+  display: block;
+}
+
 .portfolio__title {
   padding-bottom: 27px;
   font-size: 30px;
@@ -355,18 +372,18 @@ nav > ul > li > a.focus {
   color: #767e9e;
 }
 
-.portfolio__nav {
+.portfolio__menu {
   display: block;
   margin-bottom: 19px;
   padding: 0;
 }
 
-.portfolio__nav-item {
+.portfolio__menu-item {
   display: inline-block;
   margin-right: 6px;
 }
 
-.portfolio__nav-item > a {
+.portfolio__menu-item > a {
   display: inline-block;
   padding: 4px 7px;
   font-size: 12px;
@@ -375,15 +392,16 @@ nav > ul > li > a.focus {
   text-align: center;
   border-radius: 5px;
   border: 1px solid #767e9e;
+  transition: all 0.3s;
   cursor: pointer;
 }
 
-.portfolio__nav-item > a.focus {
+.portfolio__menu-item > a.focus {
   border-color: #c5c5c5;
   color: #c5c5c5;
 }
 
-.portfolio__nav-item > a:hover {
+.portfolio__menu-item > a:hover {
   border-color: #c5c5c5;
   color: #c5c5c5;
 }
@@ -403,11 +421,18 @@ nav > ul > li > a.focus {
 }
 
 .portfolio__img {
+  box-sizing: border-box;
   width: 220px;
   height: 187px;
   margin-bottom: 20px;
   overflow: hidden;
   background-color: #464b5e;
+  border: 0px solid #F06C64;
+  transition: all 0.3s;
+}
+
+.portfolio__img_active {
+  border: 5px solid #F06C64;
 }
 
 .resume {
@@ -467,6 +492,7 @@ nav > ul > li > a.focus {
 .resume__communication > a {
   margin-right: 3px;
   text-decoration: none;
+  transition: all 0.2s ease;
 }
 
 .resume__social-icon:hover {
@@ -476,6 +502,10 @@ nav > ul > li > a.focus {
 
 .resume__communication {
   margin: 23px 0;
+}
+
+.resume__communication img {
+  transition: all 0.2s ease;
 }
 
 .resume-line {
@@ -566,6 +596,7 @@ input::-webkit-input-placeholder {
   text-align: left;
   border-radius: 5px;
   background-color: #d6564f;
+  transition: all 0.3s ease;
 }
 
 .message > input:focus {
@@ -596,12 +627,15 @@ input:-ms-input-placeholder  {
 }
 
 .message__btn {
-  padding: 2px 10px;
+  position: relative;
+  left: 80%;
+  padding: 5px 20px;
   font-size: 14px;
   color: #d6564f;
   background-color: #f2f2f2;
   border: none;
   border-radius: 5px;
+  transition: all 0.3s ease;
 }
 
 .message__btn:hover {
@@ -641,6 +675,7 @@ input:-ms-input-placeholder  {
 .contacts__item > a {
   color: #f2f2f2;
   text-decoration: none;
+  transition: all 0.3s ease;
 }
 
 .contacts__item > a:hover {
@@ -674,6 +709,10 @@ footer {
   height: 76px;
   color: #666d89;
   background-color: #2d303a;
+}
+
+footer .communication img {
+  transition: all 0.2s ease;
 }
 
 footer > h3 {
