--- a/assets/src/css/style.css
+++ b/assets/src/css/style.css
@@ -33,6 +33,57 @@ main {
   width: 1020px;
 }
 
+.overlay {
+  position: fixed;
+  z-index: 30;
+  display: none;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(43, 41, 41, 0.836);
+}
+
+.overlay_show {
+  display: inline-block;
+}
+
+.overlay .modal {
+  margin: 15% auto auto auto;
+  padding-bottom: 10px;
+  width: 500px;
+  height: auto;
+  background-color: rgb(236, 227, 227);
+  border-radius: 1%;
+}
+
+.modal h2 {
+  padding: 10px 0;
+  font-size: 18px;
+}
+
+.modal__message {
+  margin: 20px;
+  color: #464b5e;
+  line-height: 22px;
+  word-wrap: break-word;
+}
+
+.modal__btn {
+  display: block;
+  margin: 20px auto 0 auto;
+  padding: 5px 20px;
+  font-size: 14px;
+  color: #d6564f;
+  background-color: #f2f2f2;
+  border: none;
+  border-radius: 5px;
+  transition: all 0.3s ease;
+}
+
+.modal__btn:hover {
+  background-color: #d6564f;
+  color: #ffffff;
+}
+
 .logo {
   display: none;
 }
@@ -201,7 +252,7 @@ nav > ul > li > a.focus {
 
 .slider__btn {
   position: absolute;
-  top: 50%;
+  top: 55%;
   bottom: auto;
   z-index: 20;
   display: inline-block;
@@ -609,7 +660,23 @@ form {
 }
 
 .message__content {
-  padding-bottom: 164px !important;
+  padding: 10px 14px 10px 14px;
+  display: block;
+  width: 591px;
+  font-size: 12px;
+  color: #f2f2f2;
+  font-weight: 400;
+  text-align: left;
+  border: 0px;
+  border-radius: 5px;
+  background-color: #d6564f;
+  resize: none;
+  transition: all 0.3s ease;
+}
+
+.message__content:focus {
+  color: #d6564f;
+  background-color: #f2f2f2;
 }
 
 ::-moz-placeholder,
@@ -629,6 +696,7 @@ input:-ms-input-placeholder  {
 .message__btn {
   position: relative;
   left: 80%;
+  margin-top: 16px;
   padding: 5px 20px;
   font-size: 14px;
   color: #d6564f;
