fix: correct media request

--- a/assets/src/css/style.css
+++ b/assets/src/css/style.css
@@ -1053,7 +1053,7 @@ footer img:hover {
   }
 }
 
-@media (max-width: 767px) {
+@media screen and (max-width: 767px) {
 
   .line-header,
   .line-slider,
